# polids

./: LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: run-ruff.yml  test.yml
app/: app.py  layouts.py
data/: topics.yml
data/elections_portugal/2022/: README.md
data/portugal_2022/: approaches.yml  parties_data.yml  topics.yml
notebooks/: 01_basic_program_analysis.ipynb  01_pdf2markdown.ipynb  02_nlp_model_tests.ipynb  02_text2chunks.ipynb  03_party_name_extraction.ipynb  03_reduce_program.ipynb  03_scrape_pdfs_parliament.ipynb  04_complete_chunk_analysis.ipynb  05_scientific_validation_policies.ipynb  06_topic_unification.ipynb  07_word_cloud.ipynb  08_pydantic2pandas.ipynb  09_data_viz.ipynb
scripts/: get_nlp_outputs.py  get_word_clouds.py
src/polids/: __init__.py  config.py  pipeline_runner.py
src/polids/party_name_extraction/: base.py  openai.py
src/polids/pdf_processing/: __init__.py  base.py  marker.py  mistral.py  openai.py  openai_processor.py
src/polids/scientific_validation/: base.py  gemini.py  openai.py  perplexity.py
src/polids/structured_analysis/: base.py  openai.py
src/polids/text_chunking/: base.py  markdown_chunker.py  openai.py
src/polids/topic_unification/: __init__.py  base.py  openai.py
src/polids/utils/: __init__.py  backoff.py  data_viz.py  linguistic_analysis.py  pandas.py  text_similarity.py
src/polids/word_cloud/: wordcloud.py
tests/: test_config.py  test_data_viz.py  test_gemini_scientific_validator.py  test_linguistic_analysis.py  test_markdown_chunker.py  test_mistral_pdf_processor.py  test_openai_party_name_extraction.py  test_openai_pdf_processor.py  test_openai_scientific_validator.py  test_openai_scientific_validator_unit.py  test_openai_structured_chunk_analyzer.py  test_openai_text_chunker.py  test_openai_topic_unifier.py  test_pandas_utils.py  test_party_name_extraction.py  test_perplexity_scientific_validator.py  test_pipeline_runner.py  test_text_similarity.py
utils/: app_utils.py  data_utils.py  nlp_utils.py  viz_utils.py
